--- a/Plantilla_TFG_latex/apendices/apendices.tex
+++ b/Plantilla_TFG_latex/apendices/apendices.tex
@@ -2,11 +2,11 @@
 
 \chapter{Recursos Informáticos} \label{chap:recursos}
 
-En este apéndice se detalla todos los recursos de hardware y software que se han usado durante la ejecución de este proyecto. Esta información es esencial para entender el entorno de desarrollo y ejecución, permitiendo así una mejor replicación o continuación del trabajo realizado.
+Dentro de este apéndice se detalla todos los recursos de \textit{hardware} y \textit{software} que se han usado durante la ejecución de este proyecto. Esta información es esencial para entender el entorno de desarrollo y ejecución, permitiendo así una mejor replicación o continuación del trabajo realizado.
     
-\section{Hardware}
+\section{\textit{Hardware}}
 
-Para el desarrollo y ejecución de este proyecto, se ha utilizado el siguiente hardware:
+Para el desarrollo y ejecución de este proyecto, se ha utilizado el siguiente \textit{hardware}:
 
 \begin{itemize}
     \item Ordenador portátil \textit{Xiaomi TM1703}.
@@ -17,29 +17,29 @@ Para el desarrollo y ejecución de este proyecto, se ha utilizado el siguiente h
     \end{itemize}
 \end{itemize}
 
-\section{Software}
+\section{\textit{Software}}
 
-En cuanto al software, se han utilizado las siguientes herramientas y plataformas:
+En cuanto al \textit{software}, se han utilizado las siguientes herramientas y plataformas:
 
 \begin{itemize}
     \item \textbf{Sistema Operativo}: Ubuntu 20.04.6 LTS.
     \item \textbf{Contenedores}: Docker, versión 24.0.5.
     \item \textbf{IDE}: Visual Studio Code 1.83.1
-    \item \textbf{Base de datos}: PostgreSQL 16.0
-    \item \textbf{Lenguaje de programación}: Python 3.8.10
-    \item \textbf{Procesador de textos}: LaTex 3.14159265-2.6-1.40.20
+    \item \textbf{Base de Datos}: PostgreSQL 16.0
+    \item \textbf{Lenguaje de Programación}: Python 3.8.10
+    \item \textbf{Procesador de Textos}: LaTex 3.14159265-2.6-1.40.20
     \item \textbf{Diseño de E-R}: draw.io
-    \item \textbf{Modelado de datos}: PostgreSQL 16.0
-    \item \textbf{Diagrama de flujo y arquitectura}: PlantUML v1.2023.12
+    \item \textbf{Modelado de Datos}: PostgreSQL 16.0
+    \item \textbf{Diagrama de Flujo y Arquitectura}: PlantUML v1.2023.12
     \item \textbf{Mockups}: Wireframe.cc
     \item \textbf{Bibliotecas Python}:
     \begin{multicols}{2}
         \begin{itemize}
-            \item Flask \cite{flask}
-            \item Flask-Login \cite{flask-login}
-            \item Flask-SQLAlchemy \cite{flask-sqlalchemy}
-            \item Flask-CORS \cite{flask-cors}
-            \item Flask-Bcrypt \cite{flask-bcrypt}
+            \item flask \cite{flask}
+            \item flask-Login \cite{flask-login}
+            \item flask-SQLAlchemy \cite{flask-sqlalchemy}
+            \item flask-CORS \cite{flask-cors}
+            \item flask-Bcrypt \cite{flask-bcrypt}
             \item python-dotenv \cite{python-dotenv}
             \item datetime \cite{datetime}
             \item werkzeug.utils \cite{werkzeug}
@@ -55,7 +55,7 @@ En cuanto al software, se han utilizado las siguientes herramientas y plataforma
 
 \section{Recursos de Red y Servidores}
 
-Además del hardware y software mencionados, se usó el servidor \textit{bahia} de la Universidad de Granada.
+Aparte del \textit{hardware} y \textit{software} mencionados, se usó el servidor \textit{bahia} de la Universidad de Granada.
 
 \begin{itemize}
     \item \textbf{Nombre del Servidor}: \textit{bahia.ugr.es}
@@ -65,18 +65,19 @@ Además del hardware y software mencionados, se usó el servidor \textit{bahia} 
     \item \textbf{Uso}: Despliegue y pruebas.
 \end{itemize}
 
-Para el despliegue de la aplicación y la base de datos, se usaron contendores. 
+Para el despliegue de la aplicación y la base de datos, se usaron contenedores. 
 
 \begin{itemize}
     \item \textbf{Herramienta de Contenedores}: Podman
     \item \textbf{Aplicación Desplegada}: Aplicación Flask
     \item \textbf{Base de Datos Desplegada}: PostgreSQL
-    \item \textbf{Servidor de Despliegue}: \textit{bahia.ugr.es}
     \item \textbf{Configuración de Contenedores}: Vólumenes
 \end{itemize}
-\chapter{Guion de las pruebas con niños} \label{chap:guion}
 
-Este guion detalla los procedimientos y pasos seguidos para realizar las pruebas de la plataforma, enfocándose en la evaluación de la usabilidad, el interés generado y la eficacia educativa.
+
+\chapter{Guión de las pruebas con niños} \label{chap:guion}
+
+Este guión detalla los procedimientos y pasos seguidos para realizar las pruebas de la plataforma, enfocándose en la evaluación de la usabilidad, el interés generado y la eficacia educativa.
 
 \section{Preparación}
 \begin{itemize}
@@ -118,8 +119,8 @@ Este guion detalla los procedimientos y pasos seguidos para realizar las pruebas
 
 \section{Feedback y Conclusiones}
 \begin{itemize}
-    \item Solicitar a los niños que proporcionen su opinión y comentarios sobre su experiencia.
-    \item Analizar todos los comentarios recopilados para identificar áreas de mejora y planificar ajustes en la plataforma.
+    \item Se solicitó a los niños que proporcionen su opinión y comentarios sobre su experiencia.
+    \item Se analizaron todos los comentarios recopilados para identificar áreas de mejora y planificar ajustes en la plataforma.
 \end{itemize}
 
 \chapter{Ficheros usados para el despliegue} \label{podmananddockerfile}
@@ -243,11 +244,11 @@ Este apéndice contiene los ficheros clave utilizados para el despliegue de la a
     \end{lstlisting}
   \end{figure}
 
-\chapter{Manual de usuario} \label{imagenessistema}
+\chapter{Manual de instalación e imágenes} \label{imagenessistema}
 
 \section {Instalación del proyecto}
 
-Para la instalación del proyecto simplemente se debe clonar el repositorio de github \cite{personalgithub}. Nótese que no es posible replicar completamente el proyecto, ya que la base de datos no está publicada. 
+Para la instalación del proyecto simplemente se debe clonar el repositorio de github \cite{personalgithub}. Se debe especificar que no es posible replicar completamente el proyecto, ya que la base de datos no está publicada. 
 
 \begin{figure}[H]
     \centering
@@ -258,9 +259,9 @@ Para la instalación del proyecto simplemente se debe clonar el repositorio de g
     \end{lstlisting}
 \end{figure}
 
-\section {Uso de la Web}
+\section {Imágenes de la Web}
 
-En este apartado se va a ofrecer una visión rápida sobre cómo utilizar el sistema y cómo quedó el diseño final. 
+En este apartado se va a ofrecer una visión rápida del sistema y cómo quedó el diseño final. 
 
 En la pantalla principal se debe iniciar sesión o registrarse. 
 
@@ -294,7 +295,7 @@ Entonces, ya se accedería a la página principal donde se listan los módulos y
     \caption{Menú Principal}
 \end{figure}
 
-Puede elegir entre configuración, ranking, juegos, biblioteca entre otros.
+Puede elegir entre configuración, \textit{ranking}, juegos, biblioteca entre otros.
 
 \begin{figure}[H]
     \centering
@@ -305,7 +306,7 @@ Puede elegir entre configuración, ranking, juegos, biblioteca entre otros.
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{imagenes/Manual/ranking.png}
-    \caption{Ranking}
+    \caption{\textit{Ranking}}
 \end{figure}
 
 \begin{figure}[H]
@@ -466,5 +467,63 @@ El perfil de administrador tiene simplificadas su tarea a gestión de la base de
     \caption{\textit{Path} educativo}
 \end{figure}
 
+\chapter{Organización del Contenido Educativo} \label{apendiceestructura}
+
+Este apéndice detalla la estructura del camino educativo que sigue un alumno del sistema. Concretamente, para los lenguajes de programación Python, C++, Java, y HTML+CSS+JS se consideran los requisitos esenciales para un aprendizaje progresivo y estructurado.
+
+\section{Python}
+\begin{itemize}
+    \item \textbf{\textit{Intro:}} Introducción general a Python, su sintaxis y conceptos fundamentales.
+    \item \textbf{\textit{Basic-Operators:}} Exploración de operadores aritméticos y lógicos.
+    \item \textbf{\textit{Logical-Operators:}} Aplicación de operadores lógicos en estructuras de control.
+    \item \textbf{\textit{If-Else:}} Implementación de estructuras condicionales.
+    \item \textbf{\textit{While:}} Utilización de bucles while para iteraciones basadas en condiciones.
+    \item \textbf{\textit{For:}} Uso de bucles for para iteraciones controladas.
+    \item \textbf{\textit{Functions-Basics:}} Fundamentos de la creación y uso de funciones.
+    \item \textbf{\textit{Functions-Advanced:}} Técnicas avanzadas en funciones, incluyendo conceptos de lambda y funciones de alto nivel.
+    \item \textbf{\textit{Lists:}} Manejo y operaciones sobre listas.
+    \item \textbf{\textit{Dictionaries:}} Uso y manipulación de diccionarios.
+\end{itemize}
+
+\section{C++}
+\begin{itemize}
+    \item \textbf{\textit{Intro:}} Fundamentos básicos de C++, incluyendo sintaxis y estructura de programas.
+    \item \textbf{\textit{Basic-Operators:}} Manejo de operadores en C++.
+    \item \textbf{\textit{Logical-Operators:}} Uso de operadores lógicos en estructuras condicionales.
+    \item \textbf{\textit{If-Else:}} Implementación de estructuras condicionales if-else.
+    \item \textbf{\textit{Switch:}} Uso del comando switch para selección múltiple.
+    \item \textbf{\textit{While:}} Aplicación de bucles while.
+    \item \textbf{\textit{For:}} Implementación de bucles for.
+    \item \textbf{\textit{Functions-Basics:}} Creación y uso de funciones.
+    \item \textbf{\textit{Classes:}} Introducción a la programación orientada a objetos.
+    \item \textbf{\textit{Inheritance:}} Conceptos y aplicaciones de herencia.
+\end{itemize}
+
+\section{Java}
+\begin{itemize}
+    \item \textbf{\textit{Intro:}} Introducción a Java y sus características fundamentales.
+    \item \textbf{\textit{Basic-Operators:}} Uso de operadores aritméticos y lógicos.
+    \item \textbf{\textit{Logical-Operators:}} Implementación de operadores lógicos en estructuras de control.
+    \item \textbf{\textit{If-Else:}} Uso de estructuras condicionales.
+    \item \textbf{\textit{Switch:}} Aplicación del comando switch.
+    \item \textbf{\textit{While:}} Uso de bucles while.
+    \item \textbf{\textit{For:}} Implementación de bucles for.
+    \item \textbf{\textit{Functions-Basics:}} Fundamentos de funciones en Java.
+    \item \textbf{\textit{Classes:}} Introducción a clases y objetos.
+    \item \textbf{\textit{Inheritance:}} Conceptos y aplicaciones de herencia.
+\end{itemize}
+
+\section{HTML+CSS+JS}
+\begin{itemize}
+    \item \textbf{\textit{Intro:}} Introducción a HTML, CSS y JavaScript y cómo interactúan.
+    \item \textbf{\textit{Styles:}} Fundamentos y aplicaciones de CSS.
+    \item \textbf{\textit{Interactivity:}} Introducción a la interactividad con JavaScript.
+    \item \textbf{\textit{DOM-Basics:}} Conceptos básicos del DOM en JavaScript.
+    \item \textbf{\textit{DOM-Advanced:}} Técnicas avanzadas para la manipulación del DOM.
+    \item \textbf{\textit{Functions-Basics:}} Uso básico de funciones en JavaScript.
+    \item \textbf{\textit{Functions-Advanced:}} Funciones avanzadas y características de ES6+.
+\end{itemize}
+
+Cada uno de estos módulos ha sido diseñado para construir sobre el conocimiento previo, asegurando un progreso fluido y coherente a través del camino educativo. La secuencia propuesta permite a los estudiantes desarrollar una comprensión sólida y completa de cada lenguaje, preparándolos para aplicaciones más avanzadas y especializadas.
 
 \end{appendices}
