--- a/Plantilla_TFG_latex/glosario/entradas_glosario.tex
+++ b/Plantilla_TFG_latex/glosario/entradas_glosario.tex
@@ -1,29 +1,29 @@
 \section*{Glosario} \label{glosario}
 
 \begin{description}
-    \item[ITS:] Sistema Inteligente de Tutorización (Intelligent Tutoring System). Es un sistema que utiliza tecnologías de inteligencia artificial para proporcionar enseñanza personalizada y apoyo educativo a los estudiantes, adaptándose a las necesidades individuales de aprendizaje.
-    \item[Hash y Salting:] Técnicas de seguridad para el almacenamiento seguro de contraseñas. El "hashing" convierte una contraseña en una cadena de caracteres única, mientras que "salting" añade datos aleatorios al hash para aumentar la seguridad.
+    \item[ITS:] Sistema Inteligente de Tutorización (\textit{Intelligent Tutoring System}). Es un sistema que utiliza tecnologías de inteligencia artificial para proporcionar enseñanza personalizada y apoyo educativo a los estudiantes, adaptándose a las necesidades individuales de aprendizaje.
+    \item[\textit{Hash} y \textit{Salting}:] Técnicas de seguridad para el almacenamiento seguro de contraseñas. El \textit{hasing} convierte una contraseña en una cadena de caracteres única, mientras que \textit{salting} añade datos aleatorios al \textit{hash} para aumentar la seguridad.
     \item[HTTPS:] Protocolo seguro para la transferencia de datos en la web. Utiliza el protocolo SSL/TLS para encriptar la información transmitida.
     \item[Flujo:] Secuencia de pasos o actividades en un proceso o escenario. En el contexto de programación, se refiere a la ejecución ordenada de instrucciones en un programa.
-    \item[Web Responsive:] Diseño web adaptable a diferentes dispositivos. Utiliza hojas de estilo en cascada (CSS) para ajustar el diseño según el tamaño de la pantalla.
+    \item[\textit{Web Responsive}:] Diseño web adaptable a diferentes dispositivos. Utiliza hojas de estilo en cascada (CSS) para ajustar el diseño según el tamaño de la pantalla.
     \item[Gamificación:] Uso de elementos de juego en entornos no lúdicos. Se emplea para aumentar la motivación y la participación en actividades que normalmente se considerarían tediosas.
-    \item[Aprendizaje Basado en Problemas (ABP):] Método pedagógico que utiliza problemas reales o simulados como punto de partida para el aprendizaje.
-    \item[API RESTful:] Interfaz de programación de aplicaciones que sigue los principios REST para la comunicación entre sistemas.
+    \item[Aprendizaje Basado en Problemas:] Método pedagógico que utiliza problemas reales o simulados como punto de partida para el aprendizaje.
+    \item[\textit{API RESTful}:] Interfaz de programación de aplicaciones que sigue los principios \textit{REST} para la comunicación entre sistemas.
     \item[Backend:] Parte del sistema que se encarga de la lógica de negocio, el acceso a la base de datos y la comunicación con diferentes servicios.
     \item[Clave Primaria:] Campo único en una tabla de base de datos que se utiliza para identificar registros de forma única.
     \item[Clave Foránea:] Campo en una tabla de base de datos que se utiliza para establecer una relación con otra tabla.
     \item[Normalización:] Proceso de organización de una base de datos para reducir la redundancia y mejorar la integridad de los datos.
-    \item[Análisis de Árbol de Sintaxis Abstracta (AST):] Técnica de análisis de código que genera un árbol para representar su estructura sintáctica.
+    \item[Análisis de Árbol de Sintaxis Abstracta:] Técnica de análisis de código que genera un árbol para representar su estructura sintáctica.
     \item[Complejidad Ciclomática:] Métrica que mide la complejidad de un programa basada en el número de caminos independientes a través del código.
     \item[Función Indicadora:] Función matemática que toma el valor de 1 si una condición específica se cumple y 0 en caso contrario.
     \item[Requisitos de Aprendizaje:] Objetivos educativos específicos que un estudiante debe alcanzar en un sistema de aprendizaje adaptativo.
     \item[Tasa de Fracaso:] Proporción de ejercicios o tareas que un estudiante no ha podido completar con éxito.
     \item[Ponderación:] Asignación de importancia relativa a diferentes criterios o variables en un cálculo.
-    \item[Análisis Estático:] Examinar el código en busca de problemas sin ejecutar el programa.
+    \item[Análisis Estático:] Búsqueda en el código de problemas sin ejecutar el programa.
     \item[Adaptabilidad:] Capacidad de un sistema para ajustarse dinámicamente a las necesidades o comportamientos del usuario.
     \item[Fitness:] Métrica que evalúa la calidad o eficacia de una solución en comparación con una solución de referencia.
     \item[Indicadores Cuantitativos:] Métricas numéricas utilizadas para evaluar el rendimiento o eficacia de un sistema.
     \item[Usabilidad:] Medida de la eficacia, eficiencia y satisfacción con la que los usuarios pueden realizar tareas en un sistema.
     \item[Metodología de Pruebas Individuales:] Enfoque de evaluación que implica probar el sistema con cada usuario de forma separada para obtener retroalimentación más precisa.
-    \item[Optimización:] Proceso de hacer cambios en un sistema para mejorarlo en términos de eficiencia, eficacia o experiencia del usuario.
+    \item[Optimización:] Proceso de cambios en un sistema para mejorarlo en términos de eficiencia, eficacia o experiencia del usuario.
 \end{description}
