--- a/Plantilla_TFG_latex/proyecto.tex
+++ b/Plantilla_TFG_latex/proyecto.tex
@@ -86,15 +86,15 @@
 \usepackage{afterpage}
 
 \usepackage{longtable}
-
+\usepackage[spanish]{babel}
 \usepackage[pdfborder={000}]{hyperref} %referencia
 
 % ********************************************************************
 % Re-usable information
 % ********************************************************************
 \newcommand{\myTitle}{Título del proyecto\xspace}
-\newcommand{\myDegree}{Grado en ...\xspace}
-\newcommand{\myName}{Nombre Apllido1 Apellido2 (alumno)\xspace}
+\newcommand{\myDegree}{Grado en Ingeniería Informática\xspace}
+\newcommand{\myName}{Noelia Carrasco Vilar (alumno)\xspace}
 \newcommand{\myProf}{Nombre Apllido1 Apellido2 (tutor1)\xspace}
 \newcommand{\myOtherProf}{Nombre Apllido1 Apellido2 (tutor2)\xspace}
 %\newcommand{\mySupervisor}{Put name here\xspace}
@@ -327,9 +327,6 @@ pdfproducer = {pdflatex}
     \printglossary
     \bibliographystyle{plain} 
     \bibliography{Bibliografia/referencias}  \label{bibliografia}
-    \addcontentsline{toc}{chapter}{Bibliografía}
     \newpage
-
-
 
 \end{document}
