--- a/Plantilla_TFG_latex/secciones/01_Introduccion.tex
+++ b/Plantilla_TFG_latex/secciones/01_Introduccion.tex
@@ -1,13 +1,14 @@
 \chapter{Introducción} \label{chap:introduction}
 
 \section{Contexto Actual y Relevancia de la Programación}
-En la era actual, la digitalización está en todos los aspectos de nuestra vida. Afecta desde cómo nos comunicamos hasta como realizamos nuestras tareas cotidianas. Dentro de este contexto, la programación ha transcendido su función original como mera herramienta técnica para convertirse en una habilidad esencial del siglo XXI. No solo es importante para aquellos que buscan una carrera tecnológica, sino también para el público que desea entender y utilizar eficazmente las herramientas digitales \cite{hadi_partovi}. Sin embargo, la enseñanza de programación a niños representa desafíos únicos, no solo debido a la complejidad del contenido, sino también por las necesidades pedagógicas específicas que conlleva. \cite{liukas_tedxcern}.
+En la era actual, la digitalización está en todos los aspectos de nuestra vida. Afecta desde cómo nos comunicamos hasta como realizamos nuestras tareas cotidianas. Dentro de este contexto, la programación ha transcendido de su función original como mera herramienta técnica para convertirse en una habilidad esencial del siglo XXI. No solo es importante para aquellos que buscan una carrera tecnológica, sino también para el público que desea entender y utilizar eficazmente las herramientas digitales \cite{hadi_partovi}. Sin embargo, la enseñanza de programación a niños representa desafíos únicos, no solo debido a la complejidad del contenido, sino también por las necesidades pedagógicas específicas que conlleva. \cite{liukas_tedxcern}.
 
 \section{Descripción del Problema}
 
-Tal como hemos hablado en la sección anterior, enseñar programación a niños es un desafío que no podemos ignorar. Existen diversas plataformas educativas, pero muchas tienen bastantes limitaciones. Ofrecen ejercicios y evaluaciones estáticas, sin tener en cuenta una adaptación al ritmo o habilidades del estudiante. Además, la mayoría, únicamente se centran en la corrección binaria del código. Por ello, ignoran aspectos como la eficiencia del mismo y el uso de buenas prácticas de programación. Este enfoque limitado no solo afecta a los estudiantes. También deja a profesores y administradores sin las herramientas necesarias para interactuar de una forma efectiva con el sistema. Es por eso que hay una necesidad clara e importante de una solución más completa y adaptativa para la enseñanza de programación a niños.
+Tal como se ha mencionado en la sección anterior, enseñar programación a niños es un desafío que no podemos ignorar. Existen diversas plataformas educativas, pero la mayoría de ellas tienen bastantes limitaciones. Ofrecen ejercicios y evaluaciones estáticas, sin tener en cuenta una adaptación al ritmo o habilidades del estudiante. Además, la gran mayoría, únicamente se centra en la corrección binaria del código. Por ello, ignoran aspectos como la eficiencia del mismo y el uso de buenas prácticas de programación. Este enfoque limitado no solo afecta a los estudiantes. También deja a profesores y administradores sin las herramientas necesarias para interactuar de una forma efectiva con el sistema. Es por eso que hay una necesidad clara e importante de una solución más completa y adaptativa para la enseñanza de programación a niños.
 
 \section{Enfoque}
+
 Este TFG adopta un enfoque multidisciplinario, combinando elementos de pedagogía, tecnología educativa y diseño de sistemas. La naturaleza del trabajo exige la interacción de varias disciplinas con tal de abordar de manera eficaz los desafíos presentados por la enseñanza de programación a niños.
 
 \subsection{Objetivos del Proyecto}
@@ -15,26 +16,26 @@ Este TFG adopta un enfoque multidisciplinario, combinando elementos de pedagogí
 El propósito principal de este TFG es desarrollar un enfoque integral para la enseñanza de programación a niños, teniendo en cuenta las particularidades y desafíos que este proceso conlleva. Los objetivos específicos se detallan a continuación:
 
 \begin{enumerate}  
-    \item \textbf{Identificación y evaluación de desafíos pedagógicos:} Analizar los retos específicos asociados con la enseñanza de programación a niños, incluyendo las necesidades pedagógicas y la complejidad del contenido.
+    \item \textbf{Identificación y Evaluación de Desafíos Pedagógicos:} Analizar los retos específicos asociados con la enseñanza de programación a niños, incluyendo las necesidades pedagógicas y la complejidad del contenido.
     
-    \item \textbf{Diseño del Sistema de Tutorización Inteligente (ITS):} Crear una estructura para un ITS que sea adaptativo y personalizado, atendiendo a las necesidades individuales de aprendizaje de cada niño.
+    \item \textbf{Diseño del Sistema de Tutorización Inteligente (ITS):} Creación de una estructura para un ITS que sea adaptativa y personalizada, atendiendo a las necesidades individuales de aprendizaje de cada niño.
     
-    \item \textbf{Desarrollo de una metodología adaptativa para el ITS:} Formular una metodología que permita al ITS ajustarse basándose en el progreso y las respuestas de los estudiantes, mejorando así la eficacia del proceso de aprendizaje.
+    \item \textbf{Desarrollo de una Metodología Adaptativa para el ITS:} Formulación de una metodología que permita al ITS ajustarse basándose en el progreso y las respuestas de los estudiantes, mejorando así la eficacia del proceso de aprendizaje.
     
-    \item \textbf{Integración y optimización del ITS en una plataforma web:} Implementar el ITS en una plataforma web amigable y accesible, con un enfoque en la experiencia del usuario, asegurando que sea intuitiva y efectiva para niños y educadores.
+    \item \textbf{Integración y 0ptimización del ITS en una Plataforma Web:} Implementación del ITS dentro de una plataforma web amigable y accesible, con un enfoque en la experiencia del usuario, asegurando que sea intuitiva y efectiva para niños y educadores.
     
-    \item \textbf{Experimentación y análisis práctico:} Probar el sistema en contextos educativos reales, recopilando datos y feedback para evaluar su eficacia y realizar los ajustes necesarios.
-    
+    \item \textbf{Experimentación y Análisis Práctico:} Prueba del sistema en contextos educativos reales, recopilando datos y \textit{feedback} para evaluar su eficacia y realizar los ajustes necesarios.
 \end{enumerate}
 
 \subsection{Desarrollo Ágil}
+
 Para abordar la dinámica cambiante y las necesidades de adaptabilidad del proyecto, se ha optado por usar un enfoque de desarrollo ágil para la implementación del software. Esto, favorece un proceso iterativo e incremental, permitiendo varios ajustes rápidos ante cualquier cambio. Además, de ofrecer la posibilidad de realizar entregas parciales que se pueden evaluar y ajustar en fases iniciales.
 
 Esta estrategia de desarrollo asegura flexibilidad, fomenta la colaboración y se centra en el usuario final. Garantizando, así, que las soluciones implementadas se alinean con las necesidades del ámbito de la enseñanza y el aprendizaje.
 
 \section{Colaboración con Codelearn S.L.}
 
-Este proyecto no habría sido posible sin la colaboración estrecha con Codelearn S.L. \cite{codelearn}, una destacada entidad de la educación tecnológica para niños. A pesar de los avances y logros de Codelearn S.L., se identificó la necesidad de evolucionar y adaptar su sistema pedagógico para hacerlo más personalizado y efectivo. Esta colaboración ha permitido fusionar la experiencia y conocimientos de ambas partes, con el objetivo de desarrollar un ITS que permita mejorar la forma en que se enseña.
+Este proyecto no habría sido posible sin la colaboración estrecha con Codelearn S.L. \cite{codelearn}, una destacada entidad de la educación tecnológica para niños. A pesar de los avances y logros de Codelearn S.L., se identificó la necesidad de evolucionar y adaptar su sistema pedagógico para hacerlo más personalizado y efectivo. Esta colaboración ha permitido fusionar la experiencia y conocimientos de ambas partes, con el objetivo de desarrollar un sistema que permita mejorar la forma en que se enseña.
 
 \section{Estructura de la memoria}
 
@@ -42,14 +43,14 @@ En esta sección se describe la estructura de esta memoria. Concretamente, se or
 
 \begin{enumerate}
     \item  \textbf{Introducción} (véase capítulo \ref{chap:introduction}): Establece el contexto de la programación en la era actual, describe el problema que aborda el TFG, presenta los objetivos, el enfoque metodológico, la colaboración con Codelearn S.L., y esta misma sección que esboza la estructura del documento.
-    \item  \textbf{Estado del Arte y Trabajos Relacionados} (véase capítulo \ref{chap:stateoftheart}): Profundiza en los Sistemas de Tutorización Inteligente (ITS), su evolución, aplicaciones actuales en diversos campos, limitaciones, desafíos y su papel en la educación moderna, incluyendo una comparativa de plataformas de programación.
+    \item  \textbf{Estado del Arte y Trabajos Relacionados} (véase capítulo \ref{chap:stateoftheart}): Profundiza en los Sistemas de Tutorización Inteligente (ITS), su evolución, aplicaciones actuales en diversos campos, limitaciones, desafíos y su papel en la educación moderna, incluyendo una comparativa de plataformas para la enseñanza de la programación.
     \item \textbf{Planificación} (véase capítulo \ref{chap:planification}): Desglosa las fases del proyecto junto con el presupuesto detallado que cubre licencias, recursos materiales, costes de personal y otros gastos.
     \item \textbf{Análisis} (véase capítulo \ref{chap:analisis}): Incluye el análisis de usuarios objetivo, requisitos educativos, modelos de casos de uso, escenarios de uso, y la seguridad y acceso al sistema.
     \item \textbf{Requisitos} (véase capítulo \ref{chap:requisitos}): Define los requisitos funcionales, no funcionales y de información del sistema, detallando aspectos generales, del sistema, de estudiantes, profesores y administradores.
     \item \textbf{Diseño e Implementación} (véase capítulo \ref{chap:analisisExperimentación}): Cubre el diseño pedagógico, la arquitectura del sistema, diseño de base de datos, interfaz de usuario y la implementación de algoritmos y módulos de aprendizaje adaptativo.
-    \item  \textbf{Despliegue} (véase capítulo \ref{chap:despliegue}): Describe la creación y configuración de imágenes para el despliegue del sistema y el uso de Podman.
+    \item  \textbf{Despliegue} (véase capítulo \ref{chap:despliegue}): Describe la creación y configuración de imágenes para el despliegue del sistema y el uso de Podman \cite{podman}.
     \item \textbf{Pruebas y Resultados} (véase capítulo \ref{chap:resultadosExperimentales}): Presenta las pruebas realizadas y los resultados obtenidos a partir de estas.
     \item \textbf{Conclusiones y Trabajo Futuro} (véase capítulo \ref{chap:conclusiones}): Ofrece conclusiones derivadas del trabajo realizado, posibles direcciones futuras para la investigación y una reflexión personal sobre el proyecto.
 \end{enumerate}    
 
-Además, los anexos proporcionan información adicional sobre recursos informáticos (véase anexo \ref{chap:recursos}), guiones de pruebas con los niños (véase anexo \ref{chap:guion}), ficheros utilizados para el despliegue (véase anexo \ref{podmananddockerfile}), un manual de usuario (véase anexo \ref{imagenessistema}), un glosario y la bibliografía.
+Además, los anexos proporcionan información adicional sobre recursos informáticos (véase anexo \ref{chap:recursos}), guión de las pruebas con los niños (véase anexo \ref{chap:guion}), ficheros utilizados para el despliegue (véase anexo \ref{podmananddockerfile}), un manual de instalación y muestra de la aplicación (véase anexo \ref{imagenessistema}), la concreción del orden de los contenidos educativos (véase anexo \ref{apendiceestructura}), un glosario y la bibliografía.
