--- a/Plantilla_TFG_latex/secciones/05_Requisitos.tex
+++ b/Plantilla_TFG_latex/secciones/05_Requisitos.tex
@@ -1,17 +1,17 @@
 \chapter{Requisitos} \label{chap:requisitos}
 
-Basado en el análisis presentado anteriormente, este capítulo se dedica a perfilar los requisitos de la plataforma. La evaluación previa ha establecido un fundamento detallar dichos requisitos. Estos serán el eje que dirigirá el proceso de desarrollo, con el propósito de garantizar que la plataforma resultante satisfaga plenamente las expectativas y requisitos de los usuarios finales.
+Basado en el análisis presentado anteriormente, este capítulo se dedica a perfilar los requisitos de la plataforma. La evaluación previa ha establecido un fundamento detallar dichos requisitos. Estos serán el eje que finalizará el proceso de análisis y dirigirá el proceso de desarrollo, con el propósito de garantizar que la plataforma resultante satisfaga plenamente las expectativas y requisitos de los usuarios finales.
 
 \section{Requisitos Funcionales}
 
 Con tal de garantizar la funcionalidad del programa y la realización de los objetivos establecidos, es esencial tener una buena definición de los requisitos funcionales. Para facilitar su comprensión, presentaremos estos requisitos en tablas, siguiendo las convenciones de la ingeniería de requisitos y desarrollo de software. La organización de los contenidos es la siguiente:
 
 \begin{itemize}
-    \item \textbf{ID}: Identificador único para cada requisito. Esencial para una fácil referencia y seguimiento.
-    \item \textbf{Nombre}: Nombre del requisito.
-    \item \textbf{Descripción}: Explicación del propósito y alcance del requisito.
-    \item \textbf{Prioridad}: La importancia del requisito en relación con el sistema. Las categorías posibles son alta, media o baja. Siendo crucial abordar primero los requisitos de alta prioridad, mientras que los de baja prioridad se harán al final.
-    \item \textbf{Estado}: Refleja la situación actual del requisito, pudiendo estar \textit{en desarrollo}, \textit{completado}, \textit{en revisión} o \textit{rechazado}.
+    \item \textbf{ID:} Identificador único para cada requisito. Esencial para una fácil referencia y seguimiento.
+    \item \textbf{Nombre:} Nombre del requisito.
+    \item \textbf{Descripción:} Explicación del propósito y alcance del requisito.
+    \item \textbf{Prioridad:} La importancia del requisito en relación con el sistema. Las categorías posibles son \textit{alta}, \textit{media} o \textit{baja}. Siendo crucial abordar primero los requisitos de alta prioridad, mientras que los de baja prioridad se harán al final.
+    \item \textbf{Estado:} Refleja la situación actual del requisito, pudiendo estar \textit{en desarrollo}, \textit{completado}, \textit{en revisión} o \textit{rechazado}.
 \end{itemize}
 
 
@@ -201,7 +201,7 @@ Con tal de garantizar la funcionalidad del programa y la realización de los obj
         \hline
         \textbf{Nombre} & Resolución de dudas \\
         \hline
-        \textbf{Descripción} & Los estudiantes realizarán preguntas y adjuntar archivos para que el profesor les ayude. \\
+        \textbf{Descripción} & Los estudiantes realizarán preguntas y podrán adjuntar archivos para que el profesor les ayude. \\
         \hline
         \textbf{Prioridad} & Alta \\
         \hline
@@ -218,7 +218,7 @@ Con tal de garantizar la funcionalidad del programa y la realización de los obj
         \hline
         \textbf{ID} & RF-11 \\
         \hline
-        \textbf{Nombre} & Consulta de los rankings \\
+        \textbf{Nombre} & Consulta de los \textit{rankings} \\
         \hline
         \textbf{Descripción} & Los estudiantes podrán consultar un ranking donde vean los \textit{top} 5 estudiantes diarios, semanales y mensuales. \\
         \hline
