--- a/Plantilla_TFG_latex/secciones/09_Conclusiones.tex
+++ b/Plantilla_TFG_latex/secciones/09_Conclusiones.tex
@@ -4,7 +4,7 @@ Este último capítulo sirve como el cierre al Trabajo de Fin de Grado presentad
 
 \section{Conclusiones}
 
-Este TFG se ha centrado en un reto: la enseñanza de la programación a niños en un contexto de una sociedad digitalizada en rápida evolución. A través de un enfoque multidisciplinario combinando pedagogía, tecnología educativa y diseño de sistemas (veáse capítulo \ref{chap:stateoftheart},), se ha desarrollado una plataforma adaptable dentro del campo de la enseñanza cumpliendo así los objetivos establecidos.
+Este TFG se ha centrado en un reto: la enseñanza de la programación a niños en un contexto de una sociedad digitalizada en rápida evolución. A través de un enfoque multidisciplinario combinando pedagogía, tecnología educativa y diseño de sistemas (véase capítulo \ref{chap:stateoftheart},), se ha desarrollado una plataforma adaptable dentro del campo de la enseñanza cumpliendo así los objetivos establecidos.
 
 Un logro clave ha sido el desarrollo del Sistema de Tutorización Inteligente, que supera las barreras de algunos de los métodos tradicionales al ofrecer un aprendizaje personalizado y adaptativo. Este sistema no solo puede mejorar la calidad del aprendizaje, sino que también puede permitir a los estudiantes progresar a su propio ritmo.
 
@@ -12,23 +12,23 @@ La colaboración con Codelearn S.L. ha sido instrumental, fusionando teoría y p
 
 \section{Trabajo Futuro}
 
-El proyecto, aunque completo, es el principio de un camino amplio. La colaboración con Codelearn S.L. no solo ha demostrado la viabilidad del proyecto, sino que también ha abierto puertas para su continuación y expansión. Los siguientes pasos están alineados con la visión y estrategia a largo plazo de la empresa, asegurando que el trabajo realizado tenga un impacto duradero y evolutivo.
+El proyecto, aunque completo, es el principio de un camino amplio. La colaboración con Codelearn S.L. no solo ha demostrado la viabilidad del proyecto, sino que también ha abierto puertas para su continuación y expansión. Los siguientes pasos están alineados con la visión y estrategia a largo plazo dentro la empresa, asegurando que el trabajo realizado tenga un impacto duradero y evolutivo.
 
 \begin{itemize}
     \item \textbf{Variedad de Recursos Didácticos}: Una mayor diversidad en el tipo de ejercicios y evaluaciones, cómo relleno de huecos de un código o cuestionarios sobre ciertos temas, entre otros ejemplos.
     \item \textbf{Automatización  de la Corrección}: Conseguir automatizar la corrección para los ejercicios HTML y que no se recurra a la figura del profesor para ello. 
-    \item \textbf{Sistema de Chat-Bot}: Sistema conversacional para una primera resolución de dudas comunes en un ejercicio, como una explicación más extensa o ejemplos de ejecución.  
+    \item \textbf{Sistema de \textit{Chat-Bot}}: Sistema conversacional para una primera resolución de dudas comunes en un ejercicio, como una explicación más extensa o ejemplos de ejecución.  
     \item \textbf{Inteligencia Artificial}: El uso de algoritmos de aprendizaje automático que optimizaría la adaptabilidad del sistema a las necesidades individuales del estudiante, debido a la gran cantidad de datos con la que entrenaría.
-    \item \textbf{Feedback en Tiempo Real}: La implementación de análisis del código mientras el estudiante lo este escribiendo con tal de poder hacer ajustes o los comentarios pertinentes.
+    \item \textbf{\textit{Feedback} en Tiempo Real}: La implementación de análisis del código mientras el estudiante lo este escribiendo con tal de poder hacer ajustes o los comentarios pertinentes.
     \item \textbf{Tests A/B}: Realización de pruebas para evaluar la eficacia de distintas técnicas pedagógicas y elementos de diseño.
   \end{itemize}
 
 \section{Reflexión Personal}
 Desde la concepción inicial del proyecto hasta la implementación técnica y las pruebas finales, cada etapa ha contribuido a un desarrollo profesional.
 
-Empezando con la colaboración con Codelearn S.L., la experiencia ha sido invaluable. Ver un entorno real me ha ofrecido perspectivas que el ámbito académico raramente puede proporcionar. He aprendido a abordar problemas desde un punto de vista más aplicado, equilibrando teoría y práctica. Fortaleciendo, así, mi comprensión sobre cómo llevar soluciones tecnológicas desde el tablero de dibujo hasta una implementación funcional y real.
+Empezando con la colaboración con Codelearn S.L., la experiencia ha sido incalculable. Ver un entorno real me ha ofrecido perspectivas que el ámbito académico raramente puede proporcionar. He aprendido a abordar problemas desde un punto de vista más aplicado, equilibrando teoría y práctica. Fortaleciendo, así, la comprensión sobre cómo llevar soluciones tecnológicas desde el tablero de dibujo hasta una implementación funcional y real.
 
-En el aspecto académico, este proyecto ha servido como una especie de trampolín para relacionar la ingeniería de software, los algoritmos y la pedagogía. Ganando una visión más clara de cómo la mayoría de disciplinas se pueden fusionar para producir soluciones educativas efectivas. 
+En el aspecto académico, este proyecto ha servido como una especie de trampolín para relacionar la ingeniería de software, los algoritmos y la pedagogía. Ganando una visión más clara de cómo la mayoría de disciplinas se pueden fusionar para producir soluciones efectivas. 
 
 El desarrollo ágil adoptado para el proyecto fue una lección valiosa en sí misma. Me enseñó la importancia de la adaptabilidad y la agilidad en un entorno tecnológico que nunca se detiene. La retroalimentación continua y los ajustes constantes fueron cruciales para navegar a través de los desafíos que inevitablemente surgieron.
 
