--- a/Plantilla_TFG_latex/portada/portada.tex
+++ b/Plantilla_TFG_latex/portada/portada.tex
@@ -16,9 +16,9 @@
 % Upper part of the page
 % 
 % Title
-{\Huge\bfseries  Sistema de tutorización inteligente para la enseñanza de programación a niños\\[0.2cm]}
+{\Huge\bfseries  Sistema de Tutorización Inteligente para la Enseñanza de Programación a Niños\\[0.2cm]}
 \noindent\rule[-1ex]{\textwidth}{3pt}\\[3.5ex]
-{\large\bfseries Diseño e implementación de una plataforma web con un sistema de tutorización inteligente para facilitar la enseñanza}
+{\large\bfseries Diseño e Implementación de una Plataforma Web con un Sistema de Tutorización Inteligente para facilitar la Enseñanza}
 \end{minipage}
 
 \vspace{0.5cm}
